--- a/README
+++ b/README
@@ -1,16 +1,34 @@
-# Nasser Bot - GCC Countries Information Assistant
+# Nasser Bot - GCC Countries Assistant 
 
-A rule-based chatbot providing comprehensive information about GCC (Gulf Cooperation Council) countries using natural language processing. This Python-based assistant offers detailed data about Saudi Arabia, UAE, Qatar, Kuwait, Oman, and Bahrain, including demographics, economies, and cultural information. Built with NLTK for natural language processing, the bot understands conversational queries and provides instant, accurate responses about the Gulf region. Features include intelligent pattern matching, efficient data retrieval algorithms, and an intuitive user interface. Developed during the TeckStride program, this project demonstrates practical implementation of NLP techniques, rule-based AI systems, and structured data management. The chatbot serves as both an educational tool for learning about Arabian Gulf countries and a technical demonstration of conversational AI fundamentals.
+A smart chatbot specialized in providing information about GCC countries (Bahrain, Kuwait, Oman, Qatar, Saudi Arabia, UAE).
 
-## 🛠️ Technologies Used
-- **Python** - Core programming language
-- **NLTK** - Natural Language Toolkit for text processing
-- **Rule-Based AI** - Pattern matching and response generation
-- **Data Structures** - Efficient information organization
+## Features 
+- Real-time AI-powered responses
+- Specialized in GCC tourism, culture, and travel
+- Clean and responsive web interface
+- Free AI API integration
 
-## 🚀 Getting Started
+## GCC Countries Covered 
+- 🇧🇭 Bahrain
+- 🇰🇼 Kuwait  
+- 🇴🇲 Oman
+- 🇶🇦 Qatar
+- 🇸🇦 Saudi Arabia
+- 🇦🇪 UAE
+
+## Tech Stack 
+- **Frontend**: HTML, CSS, JavaScript
+- **Backend**: Node.js, Express.js
+- **AI API**: OpenRouter (Mistral 7B)
+- **Styling**: Custom CSS
+
+## Installation & Setup 
+
+### Prerequisites
+- Node.js (v14 or higher)
+- OpenRouter API account
+
+### 1. Clone the repository
 ```bash
 git clone https://github.com/Bader-Aljaberi/Nasser-Bot.git
 cd Nasser-Bot
-pip install nltk
-python nasser_bot.py
