--- a/README
+++ b/README
@@ -30,5 +30,18 @@ A smart chatbot specialized in providing information about GCC countries (Bahrai
 
 ### 1. Clone the repository
 ```bash
-git clone https://github.com/Bader-Aljaberi/Nasser-Bot.git
-cd Nasser-Bot
+git clone https://github.com/Bader-Aljaberi/nasser-bot-gcc-assistant.git
+cd nasser-bot-gcc-assistan
+
+## License
+
+This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for complete details.
+
+## Author
+
+**Bader Aljaberi**
+
+- GitHub: [@Bader-Aljaberi](https://github.com/Bader-Aljaberi)
+- LinkedIn: [Bader Aljaberi](https://linkedin.com/in/bader-aljaberi)
+
+*Aspiring Computer Science Student | Full-Stack Developer | AI Enthusiast*
